[gd_scene load_steps=6 format=3 uid="uid://bvg8xqm7nxwpy"]

[ext_resource type="Script" path="res://scenes/experiments/fireball_charge/fireball_charge_experiment.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://d8m3xqm7nxwpa" path="res://scenes/experiments/fireball_charge/test_target.tscn" id="2"]

[sub_resource type="Gradient" id="Gradient_1"]
colors = PackedColorArray(1, 0.5, 0, 1, 1, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1"]
gradient = SubResource("Gradient_1")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_launch"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 200.0
initial_velocity_max = 400.0
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 4.0
color = Color(1, 0.5, 0, 1)

[node name="FireballChargeExperiment" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Background" type="ColorRect" parent="."]
offset_left = -1000.0
offset_top = -600.0
offset_right = 1000.0
offset_bottom = 600.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="ChargeIndicator" type="Sprite2D" parent="."]
visible = false
texture = SubResource("GradientTexture2D_1")

[node name="LaunchParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 40
process_material = SubResource("ParticleProcessMaterial_launch")
one_shot = true
explosiveness = 0.8

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FlashOverlay" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 0.8, 0)

[node name="ChargeLabel" type="Label" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 20
text = "Click and hold to charge fireball"

[node name="Instructions" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "FIREBALL CHARGE EXPERIMENT

Click and hold mouse button to charge
Release to launch
Max charge: 3 seconds"
horizontal_alignment = 1

[node name="Targets" type="Node2D" parent="."]

[node name="TestTarget1" parent="Targets" instance=ExtResource("2")]
position = Vector2(400, -100)

[node name="TestTarget2" parent="Targets" instance=ExtResource("2")]
position = Vector2(400, 100)

[node name="TestTarget3" parent="Targets" instance=ExtResource("2")]
position = Vector2(600, 0)

[node name="TestTarget4" parent="Targets" instance=ExtResource("2")]
position = Vector2(800, -150)

[node name="TestTarget5" parent="Targets" instance=ExtResource("2")]
position = Vector2(800, 150)

